# hiredis

./: .gitignore  .travis.yml  .typos.toml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  FindHiredis.cmake  Makefile  Makefile.am  Makefile.common  README  README.md  TODO  WORKSPACE  address.c  address.h  alloc.c  alloc.h  anet.c  anet.h  appveyor.yml  async.c  async.h  async_private.h  common.h  config.h  configure.ac  context.c  context.h  coverage.sh  dict.c  dict.h  example-ae.c  example-glib.c  example-libev.c  example-libevent.c  example-libuv.c  example.c  fd.c  fd.h  (+44 more)
.github/: wordlist.txt
.github/workflows/: build.yml  release-drafter.yml  spellcheck.yml  test.yml
adapters/: CMakeLists.txt  ae.h  glib.h  ivykis.h  libapenetwork.h  libev.h  libevent.h  libevent2.h  libhv.h  libubox.h  libuv.c  libuv.h  macosx.h  poll.h  qt.h  redismoduleapi.h
cmake/: msvc_static_runtime.cmake
contrib/: hiredis.spec
cpptests/: CMakeLists.txt  c_tests.c  cert.pem  common.cpp  common.h  example.crt  example.key  gtest.sh  key.pem  main.cpp  private.pem  redis-client-ssl.conf  redis-server-ssl.conf  redis.conf  redis_ssl.conf  run_test.py  sds.cpp  ssl.sh  stunnel.conf  stunnel4  t_async.cpp  t_basic.cpp  t_client.cpp
examples/: CMakeLists.txt  example-ae.c  example-glib.c  example-ivykis.c  example-libev.c  example-libevent-pubsub.c  example-libevent-ssl.c  example-libevent.c  example-libevent2.c  example-libubox.c  example-libuv.c  example-macosx.c  example-poll.c  example-push.c  example-qt.cpp  example-qt.h  example-redismoduleapi.c  example-ssl.c  example-uvtm.c  example.c  example.cpp  hiredis-example  hiredis-example-libev  hiredis-example-libevent
examples/hiredis-example-libev.dSYM/Contents/: Info.plist
examples/hiredis-example-libev.dSYM/Contents/Resources/DWARF/: hiredis-example-libev
examples/hiredis-example-libevent.dSYM/Contents/: Info.plist
examples/hiredis-example-libevent.dSYM/Contents/Resources/DWARF/: hiredis-example-libevent
examples/hiredis-example.dSYM/Contents/: Info.plist
examples/hiredis-example.dSYM/Contents/Resources/DWARF/: hiredis-example
extra/hiredis/: libev.h  libevent.h
fuzzing/: format_command_fuzzer.c  reply_parsing_fuzzer.c
include/: hiredis.h
jenkins/: build.sh
src/: Makefile  Makefile.common  Makefile.dep  address.c  address.h  async.c  common.h  context.c  context.h  dict.c  fd.c  fd.h  fmacros.h  format.c  format.h  handle.c  handle.h  hiredis.c  net.c  object.c  object.h  parser.c  parser.h  read.c  request.c  request.h
test/: .gitignore  Makefile  Makefile.dep  net-helper.c  net-helper.h  parser.c  spawn.c  spawn.h  test-context.c  test-format.c  test-handle.c  test-helper.h  test-object.c  test-parser.c  test-request.c
vxworks-7/: .cproject  .project  .wrmakefile  .wrproject
vxworks-7/vxw7_ge_rtm_e_BSP_ARMARCH8Allvm_LP64_LARGE_SMP/: LibrarianObject.list  Makefile
win/: hiredis.vcproj
win32/: hiredis.sln  hiredis.vcproj
win32/example/: example.vcproj
