INCLUDE(CTest)
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(PROJECT_SOURCE_DIR)
INCLUDE_DIRECTORIES(${LIBEVENT_INCLUDES})

ADD_EXECUTABLE(hiredis-gtest sds.cpp t_basic.cpp t_client.cpp t_async.cpp
    common.cpp main.cpp)
TARGET_LINK_LIBRARIES(hiredis-gtest gtest hiredis event)
ADD_TEST(NAME gtest.sh COMMAND gtest.sh)
SET_PROPERTY(TARGET hiredis-gtest PROPERTY CXX_STANDARD 11)

SET(EXAMPLE_CERT "${CMAKE_CURRENT_SOURCE_DIR}/example.crt")
SET(EXAMPLE_KEY "${CMAKE_CURRENT_SOURCE_DIR}/example.key")

ADD_DEFINITIONS(-DHIREDIS_TEST_SSL_CA="${EXAMPLE_CERT}")
ADD_DEFINITIONS(-DHIREDIS_TEST_SSL_KEY="${EXAMPLE_KEY}")
ADD_DEFINITIONS(-DHIREDIS_TEST_SSL_CERT="${EXAMPLE_CERT}")